# calk

./: CMakeLists.txt  evaluator.h  lexer.h  main.cpp  parser.h  proizv.h  simple.h  tests.cpp  tree.h
